--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Heebo:wght@600&family=Montserrat:wght@200&family=Mulish:wght@500&family=Poppins:wght@200;500&family=Questrial&display=swap');
+
 :root {
     --bg-color: #e0e0e0;
     --font-secondary-color: #616161;
@@ -11,6 +12,7 @@
 }
 
 body {
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
     flex-flow: row wrap;
@@ -25,12 +27,15 @@ body {
 }
 
 main {
+    box-sizing: border-box;
+    /* margin: 0 1rem; */
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
 #home {
+    box-sizing: border-box;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -62,7 +67,7 @@ main {
     letter-spacing: 3px;
 }
 
-#name p{
+#name p {
     font-size: 3.5rem;
     font-weight: bolder;
     margin: 0;
@@ -72,7 +77,7 @@ main {
 #home-slogan .line-1 {
     position: relative;
     width: 14.75em;
-    border-right: 2px solid rgba(255,255,255,.75);
+    border-right: 2px solid rgba(255, 255, 255, .75);
     font-size: 2rem;
     font-weight: bold;
     color: var(--font-secondary-color);
@@ -80,20 +85,32 @@ main {
     overflow: hidden;
 }
 
-.anim-typewriter{
+.anim-typewriter {
     animation: typewriter 2s steps(44) 1s 1 normal both,
-               blinkTextCursor 600ms steps(44) infinite normal;
-  }
-  @keyframes typewriter{
-    from{width: 0;}
-    to{width: 14.75em;}
-  }
-  @keyframes blinkTextCursor{
-    from{border-right-color: rgba(48, 45, 41, 0.75);}
-    to{border-right-color: transparent;}
-  }
+        blinkTextCursor 600ms steps(44) infinite normal;
+}
 
-#home-intro p{
+@keyframes typewriter {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 14.75em;
+    }
+}
+
+@keyframes blinkTextCursor {
+    from {
+        border-right-color: rgba(48, 45, 41, 0.75);
+    }
+
+    to {
+        border-right-color: transparent;
+    }
+}
+
+#home-intro p {
     font-size: 1.8rem;
     color: var(--font-secondary-color);
     /* line-height: 3rem; */
@@ -105,50 +122,65 @@ main {
 
 nav {
     display: flex;
-    height: 6rem;
+    width: 100%;
+    padding: 0 5rem;
+    margin: 0 5rem;
     justify-content: space-between;
     align-items: center;
-    padding: 0 5rem;
-    background-color: var(--bg-color);
-    border-bottom: 0.5px solid rgb(221, 217, 217);
-    /* margin: 0 5rem; */
-    border-radius: 0px;
-    background: linear-gradient(145deg, #cacaca, #f0f0f0);
-    box-shadow: 5px 5px 10px #d9d9d9,
-        -5px -5px 10px #e7e7e7;
+}
+
+.brand-name {
+    width: fit-content;
+    margin-right: 5rem;
+    width: 100%;
+    /* background-color: pink; */
 }
 
 #nav-section {
     display: flex;
-    width: 100%;
-    margin-bottom: 1rem;
-    /* padding: 0 5rem; */
-    flex-direction: column;
-    position: fixed;
+    flex-direction: row;
+    align-items: center;
     justify-content: center;
-    /* justify-content: space-between; */
-    /* align-items: center; */
-    /* margin: -0; */
-    /* height: 5rem; */
+    width: 100%;
+}
+
+#nav-section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    /* justify-content: space-betwee; */
+    width: 100%;
+    height: 6rem;
+    position: fixed;
+    margin-bottom: 1rem;
+    background: linear-gradient(145deg, #cacaca, #f0f0f0);
+    box-shadow: 5px 5px 10px #d9d9d9,
+    -5px -5px 10px #e7e7e7;
     z-index: 1;
-    /* background-color: #2c2007; */
+    border-bottom: 0.5px solid rgb(221, 217, 217);
 }
 
 #nav-links {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: center;
+    align-items: flex-end;
+    width: 100%;
+    /* background-color: pink; */
 }
 
 .nav-link {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     font-family: Poppins, sans-serif;
     font-weight: bolder;
     text-decoration: none;
     color: var(--font-secondary-color);
     margin: 0 2rem;
-    max-width: 100%;
+    width: 100%;
     border-bottom: 1px solid transparent;
     font-size: 1rem;
+    width: fit-content;
 }
 
 .nav-link:hover,
@@ -167,6 +199,7 @@ nav {
 
 
 #about {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -177,6 +210,7 @@ nav {
     width: fit-content;
     /* background-color: green; */
     border-bottom: 1px solid black;
+    width: 100%;
 }
 
 #skill-header {
@@ -185,19 +219,23 @@ nav {
 }
 
 #skills {
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
     flex-flow: row wrap;
     justify-content: center;
     /* padding: 5rem; */
+    width: 100%;
 }
 
 
 .skill {
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    border-radius: 20px;
+    position: relative;
+    /* border-radius: 20px; */
     margin: 0 1rem 2rem;
     /* margin-bottom: 1rem; */
     /* height: 280px; */
@@ -209,7 +247,7 @@ nav {
     border-radius: 30px;
     background: linear-gradient(145deg, #cacaca, #f0f0f0);
     box-shadow: 10px 10px 25px #a6a6a6,
-    -10px -10px 25px #ffffff;
+        -10px -10px 25px #ffffff;
 }
 
 .skill-content {
@@ -303,8 +341,12 @@ nav {
     display: flex;
     /* align-items: flex-start; */
     align-self: flex-start;
+    /* align-items: center; */
+    justify-content: center;
     top: 0;
     bottom: 0;
+    width: 100%;
+    height: 100%;
     margin-bottom: 0;
     cursor: pointer;
 }
@@ -312,7 +354,7 @@ nav {
 .project-link img {
     border-radius: 20px;
     height: 260px;
-    width: 400px;
+    width: 100%;
     transition: all 0.1s ease-in-out;
 }
 
@@ -334,9 +376,9 @@ nav {
 
 .project-name .name {
     display: flex;
-    max-width: 100%;
+    width: 100%;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     font-size: 1.2rem;
     font-weight: bold;
     white-space: nowrap;
@@ -422,7 +464,7 @@ nav {
     padding: 1rem;
 }
 
-#illustration img{
+#illustration img {
     height: 60%;
     width: 60%;
 }
@@ -440,8 +482,6 @@ nav {
     font-size: 1.2rem;
     font-family: Poppins, sans-serif;
     color: var(--font-gray);
-    /* margin: 2rem; */
-    /* background-color: pink; */
 }
 
 .contact {
@@ -449,18 +489,16 @@ nav {
     width: 300px;
     margin: 0 2rem 2rem;
     padding: 1rem;
-    /* background-color: var(--bg-color); */
-    /* border-radius: 15px;
-    box-shadow: 0 1px 10px 1px rgb(29, 28, 28); */
     border-radius: 25px;
     background: linear-gradient(145deg, #cacaca, #f0f0f0);
     box-shadow: 6px 6px 12px #a4a4a4,
-    -6px -6px 12px #ffffff;
+        -6px -6px 12px #ffffff;
 }
 
 .contact-icon .fa-phone {
     font-size: 2rem;
 }
+
 .contact-icon .fa-envelope {
     font-size: 2rem;
 }
@@ -510,34 +548,58 @@ nav {
 .social .fa-github:hover {
     color: black;
 }
+
 .social .fa-linkedin:hover {
     color: #0A66C2;
 }
+
 .social .fa-envelope:hover {
     color: #4285F4;
 }
 
 @media screen and (max-width: 1200px) {
     body {
-    display: flex;
-    flex-direction: row;
-    flex-flow: row wrap;
-    justify-content: center;
-    /* align-items: center; */
-    margin: 0;
-    /* padding: 5rem; */
-    justify-content: space-around;
-    box-sizing: border-box;
-    background-color: var(--bg-color);
+        display: flex;
+        flex-direction: row;
+        flex-flow: row wrap;
+        justify-content: center;
+        /* align-items: center; */
+        margin: 0;
+        /* padding: 5rem; */
+        justify-content: space-around;
+        box-sizing: border-box;
+        background-color: var(--bg-color);
+    }
+
+    nav {
+        width: 100%;
+        height: 3rem;
+        padding: 0 2rem;
+        margin: 0 1rem;
+    }
+
+    .brand-name {
+        width: fit-content;
+    }
+
+    .brand-name p{
+        font-size: 0.8rem;
+        margin-right: 0;
+        width: fit-content;
+    }
+
+    #nav-links {
+        width: 100%;
+    }
+    .nav-link {
+        width: fit-content;
+        margin: 0 1rem;
+        font-size: 0.8rem;
     }
 
     #home {
         margin: 6rem 0;
     }
-
-    /* #home-content {
-        padding: 2.5rem;
-    } */
 
     #home-introduction {
         margin: 0.5rem;
@@ -549,27 +611,39 @@ nav {
         font-size: 1.2rem;
     }
 
-    #name p{
+    #name p {
         font-size: 3rem;
     }
 
-    #home-slogan .line-1{
+    #home-slogan .line-1 {
         font-size: 1.8rem;
         width: 15.80em;
     }
 
-    .anim-typewriter{
+    .anim-typewriter {
         animation: typewriter 2s steps(44) 1s 1 normal both,
-                   blinkTextCursor 600ms steps(44) infinite normal;
-      }
-      @keyframes typewriter{
-        from{width: 0;}
-        to{width: 15.80em;}
-      }
-      @keyframes blinkTextCursor{
-        from{border-right-color: rgba(48, 45, 41, 0.75);}
-        to{border-right-color: transparent;}
-      }
+            blinkTextCursor 600ms steps(44) infinite normal;
+    }
+
+    @keyframes typewriter {
+        from {
+            width: 0;
+        }
+
+        to {
+            width: 15.80em;
+        }
+    }
+
+    @keyframes blinkTextCursor {
+        from {
+            border-right-color: rgba(48, 45, 41, 0.75);
+        }
+
+        to {
+            border-right-color: transparent;
+        }
+    }
 
     #home-intro {
         font-size: 1.5rem;
@@ -631,19 +705,30 @@ nav {
         height: 290px;
         width: 300px;
         padding: 1.5rem;
+        border-radius: 30px;
+    }
+
+    .project-link {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin-top: 2rem;
     }
 
     .project-link img {
-        margin-top: -2.5rem;
+        /* margin-top: -2.5rem; */
         height: 170px;
         width: 300px;
     }
 
+    .project-name {
+        width: 100%;
+    }
     .project-name .name {
+        width: 100%;
         font-size: 0.9rem;
         margin-top: 0;
         margin-bottom: 0;
-        margin-right: 10rem;
     }
 
     .project-name .fa-github {
@@ -659,17 +744,17 @@ nav {
 @media screen and (max-width: 640px) {
     body {
         display: flex;
-    flex-direction: column;
-    flex-flow: row wrap;
-    justify-content: center;
-    /* align-items: center; */
-    /* height: 100%; */
-    padding: 0;
-    margin: 0;
-    /* padding: 5rem; */
-    justify-content: space-around;
-    box-sizing: border-box;
-    background-color: var(--bg-color);
+        flex-direction: column;
+        flex-flow: row wrap;
+        justify-content: center;
+        /* align-items: center; */
+        /* height: 100%; */
+        padding: 0;
+        margin: 0;
+        /* padding: 5rem; */
+        justify-content: space-around;
+        box-sizing: border-box;
+        background-color: var(--bg-color);
     }
 
     #home {
@@ -717,18 +802,31 @@ nav {
         justify-content: center;
         margin: 1rem 0;
     }
-    
+
     #profile-image-mobile img {
         margin: 1rem 0;
 
     }
 
     nav {
+        width: 100%;
         height: 3rem;
-        padding: 0 2.5rem;
+        padding: 0 1rem;
+        margin: 0 1rem;
     }
 
+    .brand-name {
+        width: fit-content;
+        margin-right: 0;
+    }
+
+
+    #nav-links {
+        width: 100%;
+    }
+    
     .nav-link {
+        width: fit-content;
         margin: 0 0.5rem;
         font-size: 0.8rem;
     }
@@ -766,7 +864,7 @@ nav {
     }
 
     .skill-description p {
-        font-size: 1rem;
+        font-size: 0.8rem;
         line-height: 1.5rem;
         word-spacing: 1.5px;
     }
@@ -777,21 +875,51 @@ nav {
     }
 
     .project {
-        /* display: flex; */
+        display: flex;
+        box-sizing: border-box;
         /* align-self: start; */
+        align-items: center;
+        justify-content: space-evenly;
         padding: 0 30px;
-        height: 400px;
-        width: auto;
+        height: 450px;
+        width: 100%;
+    }
+
+    .project-link {
+        display: flex;
+        justify-content: center;
+        /* height: 100%; */
+        /* position: absolute; */
+        /* height: 100%; */
+        top: 0;
+        bottom: 0;
+        width: 100%;
+        margin-top: 2rem;
     }
 
     .project-link img {
-        margin-top: -2.5rem;
-        height: 225px;
-        width: 400px;
+        /* margin-top: 0.5rem; */
+        height: 75%;
+        width: 100%;
+    }
+
+    .project-name {
+        display: flex;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+        /* margin-bottom: 1rem; */
+        justify-content: space-between;
     }
 
     .project-name .name {
         font-size: 1rem;
+        margin-top: 0;
+        margin-bottom: 0.5rem;
+    }
+
+    .project-description {
+        margin-bottom: 2rem;
     }
 
     .project-description p {
