--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ nav {
     align-items: center;
     /* justify-content: space-between; */
     margin: 5rem;
-    padding: 0 5rem;
+    padding: 5rem;
     height: fit-content;
     width: fit-content;
     /* background-color: green; */
@@ -309,59 +309,41 @@ nav {
     justify-content: center;
     position: relative;
     /* border-radius: 20px; */
-    margin: 0 1rem 2rem;
+    margin: 0 1rem;
     /* margin-bottom: 1rem; */
     /* height: 280px; */
-    height: 18rem;
-    /* width: 380px; */
-    width: 20rem;
+    height: 10rem;
+    width: 10rem;
     /* box-shadow: 0 1px 10px 0.5px rgb(29, 28, 28);   */
     padding: 1rem;
     border-radius: 30px;
     background: linear-gradient(145deg, #cacaca, #f0f0f0);
     box-shadow: 10px 10px 25px #a6a6a6,
-        -10px -10px 25px #ffffff;
+    -10px -10px 25px #ffffff;
 }
 
 .skill-content {
-    margin: 0.5rem;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
 }
 
-/* .skill-name {
+.skill-name {
     margin: 0;
-} */
+}
 
-.skill-name p {
+.skill-name {
     font-size: 1.1rem;
     font-weight: bold;
     letter-spacing: 1px;
-    margin: 0.5rem 0;
 }
 
 .skill-icon img {
     display: flex;
-    flex-direction: row;
-    align-self: flex-start;
-    margin: 0.1rem 0;
-    height: 60px;
-    width: 60px;
-}
-
-.skill-description {
-    margin: 0;
-}
-
-.skill-description p {
-    margin: 0;
-    font-size: 0.9rem;
-    /* font-weight: 700; */
-    /* line-height: 1.2rem; */
-    /* letter-spacing: 0.5px; */
-    word-spacing: 1px;
+    height: 75px;
+    width: 75px;
 }
 
 #projects {
@@ -397,15 +379,16 @@ nav {
 
 .project {
     display: flex;
+    /* box-sizing: border-box; */
     flex-direction: column;
     position: relative;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     border-radius: 20px;
-    margin: 0 0.5rem 2rem;
+    margin: 1rem;
     padding: 40px;
-    height: 380px;
-    width: 400px;
+    height: 400px;
+    width: 410px;
     /* background-color: #e0c794; */
     /* box-shadow: 0 1px 10px 1px rgb(29, 28, 28); */
     border-radius: 37px;
@@ -415,29 +398,46 @@ nav {
 }
 
 .project-link {
+    box-sizing: border-box;
     display: flex;
     /* align-items: flex-start; */
-    align-self: flex-start;
-    /* align-items: center; */
+    /* align-self: flex-start; */
+    position: relative;
+    align-items: center;
     justify-content: center;
     top: 0;
     bottom: 0;
+    height: 252px;
     width: 100%;
-    height: 100%;
-    margin-bottom: 0;
+    /* margin-bottom: 0; */
+    margin: 0;
     cursor: pointer;
+    padding: 15px;
+    border-radius: 1.5rem;
+    background: linear-gradient(145deg, #cacaca, #f0f0f0);
+    box-shadow: 6px 8px 18px #bebebe,
+        -6px -8px 18px #ffffff;
 }
 
 .project-link img {
-    border-radius: 20px;
-    height: 260px;
+    position: relative;
+    border-radius: 1.5rem;
+    height: 230px;
     width: 100%;
-    transition: all 0.1s ease-in-out;
+    transition-duration: 400ms;
+    transition-timing-function: ease;
+    transition-property: transform;
+    /* transition: all 1s ease-in-out; */
 }
 
-.project-link:hover {
+.project-link img:is(:hover, :focus) {
+    /* background-color: var(--bg-color); */
     filter: contrast(110%);
-    transform: scale(1.01);
+    transform: scale(1.1); 
+    border-radius: 1.5rem;
+background: #e0e0e0;
+box-shadow:  0 0 15px #929292,
+             0 0 15px #929292;
 }
 
 .project-name {
@@ -547,7 +547,7 @@ nav {
     flex-direction: row;
     flex-flow: row wrap;
     width: 100%;
-    margin: 0;
+    /* margin: 0; */
     /* padding: 1rem; */
 }
 
@@ -563,10 +563,10 @@ nav {
 }
 
 .contact {
-    height: 100%;
-    width: 100%;
+    height: 10rem;
+    width: 20rem;
     padding: 2rem;
-    margin: 0 2rem 1rem;
+    margin: 0 1rem;
     border-radius: 25px;
     background: linear-gradient(145deg, #cacaca, #f0f0f0);
     box-shadow: 6px 6px 12px #a4a4a4,
@@ -619,14 +619,22 @@ nav {
 
     margin: 0 2rem;
     padding: 0.8rem;
+    transition-duration: 400ms;
+    transition-timing-function: ease;
+    transition-property: transform;
 }
 
 .social { 
     transition: all .1s ease-in-out; 
 }
 
-.social:hover { 
+/* .social:hover { 
     transform: scale(1.05); 
+} */
+
+.social:is(:hover, :focus) {
+    /* filter: contrast(110%); */
+    transform: scale(1.05);
 }
 
 .social a {
