--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ main {
 
 .home-social {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 40px;
@@ -305,18 +306,19 @@ nav {
 .skill {
     box-sizing: border-box;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     position: relative;
+    align-items: center;
     /* border-radius: 20px; */
     margin: 0 1rem;
     /* margin-bottom: 1rem; */
     /* height: 280px; */
-    height: 10rem;
-    width: 10rem;
+    height: 12rem;
+    width: 12rem;
     /* box-shadow: 0 1px 10px 0.5px rgb(29, 28, 28);   */
     padding: 1rem;
-    border-radius: 30px;
+    border-radius: 35px;
     background: linear-gradient(145deg, #cacaca, #f0f0f0);
     box-shadow: 10px 10px 25px #a6a6a6,
     -10px -10px 25px #ffffff;
@@ -331,12 +333,10 @@ nav {
 }
 
 .skill-name {
-    margin: 0;
-}
-
-.skill-name {
-    font-size: 1.1rem;
-    font-weight: bold;
+    font-family: Montserrat, sans-serif;
+    margin: 1rem 0 0;
+    font-size: 1rem;
+    font-weight: bolder;
     letter-spacing: 1px;
 }
 
@@ -387,8 +387,8 @@ nav {
     border-radius: 20px;
     margin: 1rem;
     padding: 40px;
-    height: 400px;
-    width: 410px;
+    height: 500px;
+    width: 610px;
     /* background-color: #e0c794; */
     /* box-shadow: 0 1px 10px 1px rgb(29, 28, 28); */
     border-radius: 37px;
@@ -407,7 +407,7 @@ nav {
     justify-content: center;
     top: 0;
     bottom: 0;
-    height: 252px;
+    height: 360px;
     width: 100%;
     /* margin-bottom: 0; */
     margin: 0;
@@ -422,7 +422,7 @@ nav {
 .project-link img {
     position: relative;
     border-radius: 1.5rem;
-    height: 230px;
+    height: 330px;
     width: 100%;
     transition-duration: 400ms;
     transition-timing-function: ease;
@@ -433,7 +433,7 @@ nav {
 .project-link img:is(:hover, :focus) {
     /* background-color: var(--bg-color); */
     filter: contrast(110%);
-    transform: scale(1.1); 
+    transform: scale(1.10); 
     border-radius: 1.5rem;
 background: #e0e0e0;
 box-shadow:  0 0 15px #929292,
