--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,7 +29,8 @@ body {
 main {
     box-sizing: border-box;
     /* margin: 0 1rem; */
-    width: 100%;
+    padding: 2rem;
+    width: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -41,11 +42,10 @@ main {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    width: 100%;
+    width: auto;
     /* color: var(--font-gray); */
     margin: 1rem 5rem 5rem;
     padding: 0 5rem;
-    /* background-color: green; */
     border-bottom: 1px solid black;
 }
 
@@ -265,31 +265,27 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: space-between; */
+    justify-content: center;
+    align-items: center;
     margin: 5rem;
     padding: 5rem;
-    /* height: 100%; */
-    width: fit-content;
+    height: 100vh;
+    width: auto;
     /* background-color: green; */
     border-bottom: 1px solid black;
-    width: 100%;
+    /* width: 100%; */
 }
 
-#skill-header {
+#skill-header h1{
     /* font-size: 1rem; */
-    margin: 6rem 0 0;
+    /* margin: 6rem 0 0; */
     letter-spacing: 2.5px;
 }
 
 #skills {
-    box-sizing: border-box;
     display: flex;
     flex-direction: row;
     flex-flow: row wrap;
-    justify-content: center;
-    /* padding: 5rem; */
-    /* background-color: green; */
-    width: 100%;
 }
 
 
@@ -340,10 +336,10 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 5rem;
+    margin: 0 5rem;
     padding: 0 5rem;
     height: fit-content;
-    width: fit-content;
+    width: auto;
     /* background-color: green; */
     border-bottom: 1px solid black;
 }
@@ -353,7 +349,6 @@ nav {
     letter-spacing: 2.5px;
 }
 #projects-header h1{
-    /* font-size: 1rem; */
     margin: 6rem 0 0;
 }
 
@@ -363,35 +358,32 @@ nav {
     flex-flow: row wrap;
     justify-content: space-evenly;
     height: fit-content;
-    /* height: 100vh; */
-    /* margin: 5rem; */
 }
 
 .project {
     display: flex;
-    /* box-sizing: border-box; */
     flex-direction: column;
     position: relative;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     border-radius: 20px;
     margin: 1rem;
     padding: 40px;
     height: 500px;
     width: 610px;
-    /* background-color: #e0c794; */
-    /* box-shadow: 0 1px 10px 1px rgb(29, 28, 28); */
     border-radius: 37px;
     background: linear-gradient(145deg, #cacaca, #f0f0f0);
     box-shadow: 12px 12px 24px #bebebe,
         -12px -12px 24px #ffffff;
 }
 
+.project-content {
+    margin-top: 1rem;
+}
+
 .project-link {
     box-sizing: border-box;
     display: flex;
-    /* align-items: flex-start; */
-    /* align-self: flex-start; */
     position: relative;
     align-items: center;
     justify-content: center;
@@ -399,7 +391,6 @@ nav {
     bottom: 0;
     height: 360px;
     width: 100%;
-    /* margin-bottom: 0; */
     margin: 0;
     cursor: pointer;
     padding: 15px;
@@ -417,11 +408,9 @@ nav {
     transition-duration: 400ms;
     transition-timing-function: ease;
     transition-property: transform;
-    /* transition: all 1s ease-in-out; */
 }
 
 .project-link img:is(:hover, :focus) {
-    /* background-color: var(--bg-color); */
     filter: contrast(110%);
     transform: scale(1.10); 
     border-radius: 1.5rem;
@@ -470,6 +459,7 @@ box-shadow:  0 0 15px #929292,
 
 .project-name .fa-github:hover {
     filter: contrast(180%);
+    color: black;
 }
 
 .project-description {
@@ -489,8 +479,9 @@ box-shadow:  0 0 15px #929292,
     justify-content: center;
     align-items: center;
     margin: 7rem 1rem;
-    height: fit-content;
-    width: 100%;
+    margin: 5rem;
+    height: 100vh;
+    width: auto;
     padding: 6rem 15rem;
 }
 
@@ -498,25 +489,17 @@ box-shadow:  0 0 15px #929292,
     font-size: 1rem;
     margin-top: 3rem;
     letter-spacing: 2.5px;
-    /* height: fit-content; */
 }
 
 #contacts-container {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    /* flex-flow: row wrap; */
     align-items: center;
-    /* margin: 1rem; */
     height: fit-content;
-    width: 80%;
-    padding: 0 10rem;
-    /* height: fit-content; */
+    width: 100%;
     justify-content: space-evenly;
     border-radius: 37px;
-    /* background: linear-gradient(145deg, #cacaca, #f0f0f0);
-    box-shadow: 6px 6px 12px #bebebe,
-    -6px -6px 12px #ffffff; */
 }
 
 
@@ -524,12 +507,10 @@ box-shadow:  0 0 15px #929292,
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
-    /* flex-flow: row wrap; */
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    width: 70%;
     margin: 1rem;
-    /* background-color: green; */
 }
 
 #contact-description {
@@ -537,8 +518,6 @@ box-shadow:  0 0 15px #929292,
     flex-direction: row;
     flex-flow: row wrap;
     width: 100%;
-    /* margin: 0; */
-    /* padding: 1rem; */
 }
 
 #contact-description p {
@@ -546,7 +525,6 @@ box-shadow:  0 0 15px #929292,
     flex-direction: row;
     flex-flow: row wrap;
     font-size: 1.5rem;
-    /* padding: 1rem; */
     margin: 0 1rem 1rem;
     font-family: Poppins, sans-serif;
     color: var(--font-secondary-color);
