--- a/src/css/style.css
+++ b/src/css/style.css
@@ -72,7 +72,7 @@ main {
     color: var(--font-primary-color);
     white-space: nowrap;
     overflow: hidden;
-    margin-top: 0;
+    margin-top: 1.5rem;
     margin-bottom: 0;
     transform: translateY(-50%);
 }
@@ -102,11 +102,14 @@ main {
     }
 }
 
+#home-intro {
+    margin-top: 0;
+}
 #home-intro p {
     font-size: 1.8rem;
     color: var(--font-secondary-color);
     /* line-height: 3rem; */
-    margin-top: 1rem;
+    margin-top: 0;
 }
 
 #home-socials {
