--- a/src/css/style.css
+++ b/src/css/style.css
@@ -273,17 +273,72 @@ nav {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 5rem;
-    padding: 5rem;
-    height: 100vh;
+    margin: 0 5rem;
+    padding: 6rem  6rem 1rem;
+    height: auto;
     width: 100%;
     border-bottom: 1px solid black;
+    /* background-color: green; */
 }
 
-#skill-header h1{
+#about-me {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0 2rem;
+    height: fit-content;
+    width: 85%;
+}
+
+.about-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 180px;
+    width: 100%;
+    margin: 1.5rem 0;
+    padding: 0;
+    /* background-color: green; */
+}
+
+.about-image {
+    height: 100%;
+    width: fit-content;
+    margin: 0 4rem;
+    padding: 0;
+}
+
+.about-text {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 0 2rem;
+    font-size: 1.3rem;
+    border-radius: 30px;
+    line-height: 1.8rem;
+    height: 100%;
+    width: 100%;
+    color: var(--font-secondary-color);
+    background: linear-gradient(145deg, #cacaca, #f0f0f0);
+    box-shadow: 12px 12px 25px #a6a6a6,
+    -12px -12px 25px #ffffff;
+}
+
+#about-header h1{
     font-size: 45px;
     letter-spacing: 2.5px;
 }
+
+#about-footer {
+    margin-top: 3rem;
+    font-size: 2rem;
+    color: var(--font-secondary-color);
+}
+
 
 #skills {
     display: flex;
@@ -291,6 +346,8 @@ nav {
     flex-flow: row wrap;
     align-items: center;
     justify-content: center;
+    margin-top: 2rem;
+    margin-bottom: 0;
 }
 
 
@@ -302,8 +359,8 @@ nav {
     position: relative;
     align-items: center;
     margin: 0 1rem 2rem;
-    height: 10rem;
-    width: 10rem;
+    height: 9rem;
+    width: 9rem;
     padding: 1rem;
     border-radius: 35px;
     background: linear-gradient(145deg, #cacaca, #f0f0f0);
@@ -478,11 +535,10 @@ box-shadow:  0 0 15px #929292,
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 7rem 1rem;
-    margin: 5rem;
+    margin: 0 5rem;
     height: 100vh;
     width: auto;
-    padding: 6rem 15rem;
+    padding: 0 15rem;
 }
 
 #contacts-header h1{
@@ -490,7 +546,7 @@ box-shadow:  0 0 15px #929292,
     letter-spacing: 1px;
     font-size: 45px;
     width: 100%;
-    margin-top: 3rem;
+    margin-top: 0;
 }
 
 #contacts-container {
@@ -658,7 +714,7 @@ box-shadow:  0 0 15px #929292,
         flex-direction: row;
         justify-content: center;
         margin: 0;
-        padding: 0 0.5rem;
+        padding: 0;
         justify-content: space-around;
         box-sizing: border-box;
         background-color: var(--bg-color);
@@ -680,30 +736,30 @@ box-shadow:  0 0 15px #929292,
     }
 
     #home {
-        margin: 2rem 2rem;
+        margin: 2rem 0;
         padding: 0;
         height: auto;
         width: 100%;
-        padding: 5rem 2rem;
+        padding: 5rem 1rem;
     }
 
     #home-introduction {
         margin: 0.5rem;
-        letter-spacing: 1px;
+        letter-spacing: 0.5px;
     }
 
     #greet p{
-        font-size: 1.2rem;
+        font-size: 0.8rem;
         margin-bottom: 0.5rem;
     }
 
     #name p {
-        font-size: 2.5rem;
+        font-size: 1.5rem;
         margin: 0;
     }
 
     #home-slogan .line-1 {
-        font-size: 1.8rem;
+        font-size: 1.2rem;
         width: 15.80em;
         margin-top: 1rem;
     }
@@ -724,7 +780,7 @@ box-shadow:  0 0 15px #929292,
         }
 
         to {
-            width: 21em;
+            width: 20.6em;
         }
     }
 
@@ -739,7 +795,7 @@ box-shadow:  0 0 15px #929292,
     }
 
     #home-intro p{
-        font-size: 1.6rem;
+        font-size: 1rem;
     }
 
     #home-socials {
@@ -748,12 +804,12 @@ box-shadow:  0 0 15px #929292,
     }
 
     .home-social {
-        height: 30px;
-        width: 30px;
+        height: 25px;
+        width: 25px;
     }
 
     .home-social a {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
     }
 
     /* ABOUT SECTION  */
@@ -812,8 +868,9 @@ box-shadow:  0 0 15px #929292,
         flex-direction: column;
         flex-flow: row wrap;
         justify-content: center;
-        padding: 0.2rem;
+        padding: 0;
         margin: 0;
+        width: 100%;
         justify-content: space-around;
         box-sizing: border-box;
         background-color: var(--bg-color);
@@ -900,6 +957,7 @@ box-shadow:  0 0 15px #929292,
 
     #nav-section {
         height: 75px;
+        width: 100%;
     }
 
     .nav-link {
@@ -930,9 +988,48 @@ box-shadow:  0 0 15px #929292,
         height: auto;
     }
 
-    #skill-header h1 {
+    #about-me {
+        margin: 0 0.5rem;
+        width: 100%;
+    }
+
+    .about-info {
+        height: 90px;
+        margin: 0.5rem 0;
+    }
+
+    .about-image {
+        margin: 0 0.5rem;
+        width: 6rem;
+    }
+
+    .about-text {
+        padding: 0 1.2rem;
+        font-size: 0.5rem;
+        line-height: 0.7rem;
+        border-radius: 15px;
+        box-shadow: 6px 6px 20px #a6a6a6,
+    -6px -6px 20px #ffffff;
+    }
+
+    #about-header h1 {
         font-size: 30px;
     }
+
+    #about-footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        font-size: 1rem;
+        width: 80%;
+        margin-top: 1rem;
+    }
+
+    #skills {
+        margin-top: 1rem;
+    }
+
 
     .skill {
         height: 6rem;
