--- a/src/css/style.css
+++ b/src/css/style.css
@@ -273,8 +273,8 @@ nav {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 0 5rem;
-    padding: 6rem  6rem 1rem;
+    margin: 0;
+    padding: 6rem  0 1rem;
     height: auto;
     width: 100%;
     border-bottom: 1px solid black;
@@ -287,7 +287,7 @@ nav {
     justify-content: center;
     align-items: center;
     padding: 0;
-    margin: 0 2rem;
+    margin: 0;
     height: fit-content;
     width: 85%;
 }
@@ -297,7 +297,7 @@ nav {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 180px;
+    height: 190px;
     width: 100%;
     margin: 1.5rem 0;
     padding: 0;
@@ -313,11 +313,10 @@ nav {
 
 .about-text {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 0 2rem;
-    font-size: 1.3rem;
     border-radius: 30px;
     line-height: 1.8rem;
     height: 100%;
@@ -326,6 +325,14 @@ nav {
     background: linear-gradient(145deg, #cacaca, #f0f0f0);
     box-shadow: 12px 12px 25px #a6a6a6,
     -12px -12px 25px #ffffff;
+}
+
+.about-text p {
+    display: flex;
+    align-items: center;
+    font-size: 1.3rem;
+    max-height: 90%;
+    width: 100%;
 }
 
 #about-header h1{
@@ -708,6 +715,23 @@ box-shadow:  0 0 15px #929292,
     opacity: 0.8;
 }
 
+@media screen and (max-width: 1500px) {
+    .about-me {
+        width: 100%;
+    }
+    .about-info {
+        height: 220px;
+        margin: 1rem 0;
+    }
+    .about-image {
+        margin: 0 1rem;
+    }
+    .about-text p {
+        font-size: 1.1rem;
+        /* line-height: 1.5rem; */
+    }
+}
+
 @media screen and (max-width: 1200px) {
     body {
         display: flex;
@@ -807,16 +831,25 @@ box-shadow:  0 0 15px #929292,
         height: 25px;
         width: 25px;
     }
-
+    
     .home-social a {
         font-size: 1.5rem;
     }
-
+    
     /* ABOUT SECTION  */
-
+    
     #about {
-        margin: 2.5rem;
-        padding: 2.5rem;
+        padding: 2rem;
+    }
+    #about-me {
+        width: 100%;
+    }
+    .about-info {
+        height: 220px;
+    }
+
+    .about-text {
+        line-height: 1.5rem;
     }
 
     #skills {
@@ -859,6 +892,22 @@ box-shadow:  0 0 15px #929292,
 
     #contact-container {
         width: 100%;
+    }
+
+}
+
+@media screen and (max-width: 1024px) {
+    .about-info {
+        height: 230px;
+    }
+    .about-text {
+        line-height: 1.3rem;
+    }
+    .about-text p {
+        font-size: 1rem;
+    }
+    .about-image {
+        margin: 0 0.5rem;
     }
 }
 
@@ -994,22 +1043,27 @@ box-shadow:  0 0 15px #929292,
     }
 
     .about-info {
-        height: 100px;
+        height: 120px;
         margin: 0.4rem 0;
     }
 
     .about-image {
-        margin: 0 0.5rem;
+        margin: 0 0.2rem;
         width: 5rem;
     }
 
     .about-text {
-        padding: 0 0.6rem;
-        font-size: 0.5rem;
-        line-height: 0.7rem;
+        line-height: 0.8rem;
         border-radius: 10px;
         box-shadow: 6px 6px 20px #a6a6a6,
-    -6px -6px 20px #ffffff;
+        -6px -6px 20px #ffffff;
+        width: 100%;
+        padding: 0 0.8rem;
+    }
+    
+    .about-text p{
+        padding: 0;
+        font-size: 0.6rem;
     }
 
     #about-header h1 {
