style.css layout adjustment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -731,7 +731,7 @@ box-shadow:  0 0 15px #929292,
         /* line-height: 1.5rem; */
     }
     #contacts {
-        padding: 6.5rem 0;
+        padding:  0;
     }
 }
 
